# rust-bitvmx-operator-comms

./: .gitignore  Cargo.toml  README.md
broker/: Cargo.toml
broker/config/: op_1.pem  op_2.pem  op_3.pem  op_4.pem  peers.yaml
broker/src/: allow_handler.rs  broker.rs  helper.rs  lib.rs  operator_comms.rs  p2p_handler.rs
broker/test_certs/: priv1.key  priv2.key
memory/: Cargo.toml
memory/src/: lib.rs
src/: lib.rs
