[package]
name = "p2p_handler"
version = "0.1.0"
edition = "2021"
description = "BitVMX Operator Comms"
keywords = ["BitVMX", "Operator", "Comms"]
repository = "https://github.com/FairgateLabs/rust-fakep2p"
readme = "README.md"

[workspace]
resolver = "2"
members = ["memory", "broker"]

[features]
default = ["broker-impl"]
memory-impl = ["memory"]
broker-impl = ["broker"]

[dependencies]
memory = { path = "memory", optional = true }
broker = { path = "broker", optional = true }
