[package]
name = "operator_comms"
version = "0.0.2"
edition = "2021"
description = "BitVMX Operator Comms"
keywords = ["BitVMX", "Operator", "Comms"]
repository = "https://github.com/FairgateLabs/rust-bitvmx-operator-comms"
readme = "README.md"

[workspace]
resolver = "2"
members = ["memory", "broker"]

[features]
default = ["broker-impl"]
memory-impl = ["memory"]
broker-impl = ["broker"]

[dependencies]
memory = { path = "memory", optional = true }
broker = { path = "broker", optional = true }
