[package]
name = "bitvmx-operator-comms"
version = "0.5.0"
edition = "2021"
description = "BitVMX Operator Comms"
keywords = ["BitVMX", "Operator", "Comms"]
repository = "https://github.com/FairgateLabs/rust-bitvmx-operator-comms"
readme = "README.md"

[dependencies]
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.0"
serde_json = "1.0.64"
serde_yaml = "0.9.33"
hex = "0.4.3"
anyhow = "1.0.98"
bitvmx-broker = { git = "https://github.com/FairgateLabs/rust-bitvmx-broker.git", features = [
    "storagebackend",
] , tag = "v0.5.0" }
rust-bitvmx-storage-backend = { git = "https://github.com/FairgateLabs/rust-bitvmx-storage-backend.git", tag = "v0.5.0" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
